ADD : context store

--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -95,3 +95,10 @@
 .loginRegisterButton:hover {
   opacity: 0.7;
 }
+
+.registerError {
+  color: red;
+  margin-top: 10px;
+  font-weight: 600;
+  font-style: italic;
+}
