--- a/client/src/components/singleComment/SingleComment.css
+++ b/client/src/components/singleComment/SingleComment.css
@@ -177,3 +177,19 @@
 .box_result .result_comment .tools_comment span {
   color: #90949c;
 }
+.show_more {
+  background: #3578e5;
+  border: none;
+  box-sizing: border-box;
+  color: #fff;
+  font-size: 10px;
+  padding: 2px;
+  text-shadow: none;
+  width: 100%;
+  height: 25px;
+  font-weight: bold;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 2px;
+}
