--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -76,3 +76,13 @@
     border-bottom: 1px dashed gray;
     font-size: 15px;
 }
+
+.shareButton{
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: green;
+  font-weight: 500;
+  cursor: pointer;
+  color: white;
+}
