--- a/client/src/pages/confirmDelete/ConfirmDelete.css
+++ b/client/src/pages/confirmDelete/ConfirmDelete.css
@@ -1,28 +1,29 @@
 .confirmDelete {
-    display: flex;
-    margin-left: 10px;
+  display: flex;
+  width: 100%;
 }
 
 .confirmDeleteContainer1 {
-    margin-top: 80px;
+  flex: 5.5;
+  margin: 50px;
 }
 
 .confirmSubmit {
-    align-self: center;
-    width: 150px;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    background-color: rgb(250, 53, 53);
-    padding: 10px;
-    margin-top: 30px;
-    margin-left: 5px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  align-self: center;
+  width: 150px;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  background-color: rgb(250, 53, 53);
+  padding: 10px;
+  margin-top: 30px;
+  margin-left: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .confirmSubmit:hover {
-    background-color: red;
+  background-color: red;
 }
