--- a/client/src/pages/settings/Settings.css
+++ b/client/src/pages/settings/Settings.css
@@ -1,63 +1,147 @@
 .profile {
-    display: flex;
-  }
-  
-  .profileRight {
-    flex: 9;
-  }
-  
-  .profileCover {
-    height: 320px;
-    position: relative;
-  }
-  
-  .profileCoverImg {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-  }
-  
-  .profileUserImg {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-left: 39%;
-    top: 150px;
-    border: 3px solid white;
-  }
-  
-  .profileInfo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .profileInfoName {
-    font-size: 24px;
-  }
-  
-  .profileInfoDesc {
-    font-weight: 300;
-  }
-  
-  .profileRightBottom {
-    display: flex;
-  }
-  
-  .shareButton {
-    border: none;
-    padding: 7px;
-    border-radius: 5px;
-    background-color: green;
-    font-weight: 500;
-    margin-right: 20px;
-    cursor: pointer;
-    color: white;
-  }
-  
+  display: flex;
+}
+
+.profileRight {
+  flex: 9;
+}
+
+.profileCover {
+  height: 320px;
+  position: relative;
+}
+
+.profileCoverImg {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.profileUserImg {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  margin-left: 39%;
+  top: 150px;
+  border: 3px solid white;
+}
+
+.profileInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.profileInfoName {
+  font-size: 24px;
+}
+
+.profileInfoDesc {
+  font-weight: 300;
+}
+
+.profileRightBottom {
+  display: flex;
+}
+
+.shareButton {
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: green;
+  font-weight: 500;
+  margin-right: 20px;
+  cursor: pointer;
+  color: white;
+}
+
+.wrapper {
+  margin: 40px;
+  flex: 5;
+  background: rgb(179, 209, 255);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-box {
+  background: #fff;
+  width: 500px;
+  height: fit-content;
+  box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 20px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container .input-addon {
+  margin-top: 1.5rem;
+}
+
+.form-element {
+  margin-top: 0.8rem;
+  height: 1.5rem;
+  border: 1px solid #d2d6de;
+  padding: 5px;
+  font-size: 0.9rem;
+}
+
+.form-element:focus {
+  outline: 1px solid #673ab7;
+}
+
+.form-element::placeholder {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.8rem;
+}
+
+.form-element.is-submit {
+  height: 3rem;
+  font-size: 1rem;
+  line-height: normal;
+  font-family: "Raleway", sans-serif;
+  background: #1877f2;
+  color: #fff;
+}
+
+.input-addon {
+  display: flex;
+}
+
+.input-addon > .form-element {
+  margin-top: 0;
+}
+
+.input-field {
+  height: 40px;
+  flex: 1;
+}
+
+.input-addon-item {
+  padding: 5px;
+  width: 35px;
+  border: 1px solid #d2d6de;
+  border-left: 0;
+  background: #fff;
+  color: #6a6b6d;
+}
+
+.registerError {
+  color: red;
+  margin-top: 10px;
+  font-weight: 600;
+  font-style: italic;
+  float: left;
+}
