--- a/client/src/components/singleReply/SingleReply.css
+++ b/client/src/components/singleReply/SingleReply.css
@@ -203,3 +203,16 @@
 .editBtn:focus {
   outline: none;
 }
+
+.displayReply {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.displayReply:hover {
+  overflow: visible;
+  display: block;
+}
