--- a/client/src/components/video/Video.css
+++ b/client/src/components/video/Video.css
@@ -5,22 +5,22 @@
   object-fit: contain;
 }
 
-.video-js.vjs-mouse .vjs-big-play-button:before {
-  font-size: 1.5em;
-  color: white;
-  opacity: 0.9;
-  margin-top: -2.5%;
-  margin-left: -2.5%;
+.vjs-sublime-skin .vjs-big-play-button {
+  font-size: 5em;
+  line-height: 2em;
+  height: 2em;
+  width: 2em;
+  border: 0;
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  margin-left: -1em;
+  margin-top: -1em;
+  background-color: #1877f2;
+  opacity: 0.7;
 }
 
-.video-js.vjs-mouse .vjs-big-play-button {
-  background-color: #f3951d;
-  opacity: 0.8;
-  width: 150px;
-  height: 100px;
-  border-radius: 10%;
-  border-style: solid;
-  border-width: 4px;
-  border-color: #ffffff;
-  margin-left: -11%;
+.vjs-sublime-skin:hover .vjs-big-play-button:hover {
+  opacity: 0.5;
+  background-color: #1877f2;
 }
