--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,4 +1,8 @@
-.homeContainer{
-    display: flex;
-    width: 100%;
+.homeContainer {
+  display: flex;
+  width: 100%;
+}
+
+.status {
+  flex: 5;
 }
