ADD: story styles

--- a/client/src/components/status/Status.css
+++ b/client/src/components/status/Status.css
@@ -5,3 +5,87 @@
 .feedWrapper {
   padding: 20px;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.stories {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  max-width: 768px;
+  border-radius: 4px;
+  overflow: auto hidden;
+  /* Overflow para substituir o efeito de slide */
+}
+
+.stories__item {
+  padding: 15px 10px;
+  user-select: none;
+}
+
+.stories__item:first-child {
+  padding-left: 20px;
+}
+.stories__item:last-child {
+  padding-right: 20px;
+}
+
+.stories__item button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 0;
+  background: transparent;
+  width: 64px;
+  cursor: pointer;
+  outline: 0;
+}
+
+.stories__item-picture {
+  width: 64px;
+  height: 64px;
+  margin-bottom: 5px;
+  padding: 6px;
+  position: relative;
+}
+
+.stories__item-picture img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.0975);
+  pointer-events: none;
+}
+
+.stories__item-username {
+  width: 64px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.stories__item--active .stories__item-picture::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  border-radius: 50%;
+  z-index: -1;
+  background: linear-gradient(
+    45deg,
+    rgba(245, 160, 77, 1) 0%,
+    rgba(160, 15, 139, 1) 100%
+  );
+}
+
+.stories__item--active .stories__item-picture img {
+  box-shadow: 0 0 0 2px #fff;
+}
