--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -8,6 +8,7 @@
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1;
@@ -53,5 +54,3 @@
   margin: 0;
   list-style: none;
 }
-
-
