--- a/client/src/components/status/Status.css
+++ b/client/src/components/status/Status.css
@@ -61,6 +61,7 @@
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.0975);
   pointer-events: none;
+  object-fit: cover;
 }
 
 .stories__item-username {
@@ -84,6 +85,23 @@
     rgba(245, 160, 77, 1) 0%,
     rgba(160, 15, 139, 1) 100%
   );
+}
+
+.stories__item--inactive .stories__item-picture::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  border-radius: 50%;
+  z-index: -1;
+  background: grey;
+}
+
+.stories__item--inactive .stories__item-picture img {
+  box-shadow: 0 0 0 2px #fff;
 }
 
 .stories__item--active .stories__item-picture img {
