--- a/client/src/pages/viewStatus/ViewStatus.css
+++ b/client/src/pages/viewStatus/ViewStatus.css
@@ -12,11 +12,23 @@
   left: 0;
   width: 100%;
   padding: 20px;
-  margin-left: 20px;
   margin-top: 12px;
   z-index: 1;
   color: white;
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), transparent);
+}
+
+.storyDescContainer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 25px;
+  width: 100%;
+  padding: 20px;
+  z-index: 1;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
 }
 
 .statusImage {
@@ -45,4 +57,37 @@
 
 .statusCont {
   overflow: hidden;
+}
+
+.storyTextContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin-left: 25%;
+  z-index: 1;
+  color: white;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), transparent);
+}
+
+.statusText {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  object-fit: contain;
+  padding: 20px;
+  color: black;
+  background-color: #3387f5;
+}
+
+.contentText {
+  font-size: 30px;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
+  display: table-cell;
+  vertical-align: middle;
 }
