--- a/client/src/pages/viewStatus/ViewStatus.css
+++ b/client/src/pages/viewStatus/ViewStatus.css
@@ -71,23 +71,25 @@
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), transparent);
 }
 
+.statusText::before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-left: -0.5ch;
+}
+
 .statusText {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 50%;
   height: 100%;
-  object-fit: contain;
   padding: 20px;
   color: black;
   background-color: #3387f5;
+  text-align: center;
 }
 
 .contentText {
   font-size: 30px;
-  justify-content: center;
-  align-items: center;
-  text-align: justify;
-  display: table-cell;
+  display: inline-block;
   vertical-align: middle;
 }
